# gaia

./: Gaia_Query.py  Iota_Pegasi_Sector.py  README.md  Sector_Query.py  gaia_query_result.csv  not_in_Gaia_DR3.csv  not_in_any_Gaia_DR.csv  pyproject.toml  starcount.py  system_generator.py
src/planetary_system_data/: arrange_components.py  core_accretion.py  dataclasses_and_enumerations.py  dice.py  disk_instability.py  planet_generator.py  primary_star.py  primary_star_mass.py  protoplanetary_disk.py  star_system.metallicity.py  star_system_age.py  stellar_classification.py  stellar_evolution.py  stellar_multiplicity.py  stellar_orbital_parameters.py  system_generator.py
tests/unit/planetary_system_data/: test_primary_star.py  test_stellar_multiplicity.py
