
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "astropy",
    "astroquery",
    "scipy",
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]