
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "planetary_system_data"
version = "0.1.0"
description = "A project to generate data for fictional planetary systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "astropy",
    "astroquery",
    "scipy",
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "isort"
]